--- a/index.html
+++ b/index.html
@@ -2,34 +2,33 @@
 
 <html>
 
-    <head>
-        <title>Anavrin</title>
-        <link href="assets/fonts/segoeuib.ttf"
-        <link href="assets/fonts/segoeuisl.ttf"
-        <link rel="logo" href="favicon.ico">
-        <link rel="stylesheet" type="text/css" href="style.css" />
-    </head>
+<head>
+  <title>Anavrin</title>
+  <link rel="logo" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
 
-    <body>
+<body>
 
-        <h1>Anavrin</h1>
-        <div class="line"></div>
-        <p id="TagLine">A class notes archive</p>
-        <img class="watermark" src="./assets/doc logo-02.png">
-        <ul class="credits">
-            <a class="foot" href=""><strong>Team</strong></a>
-            <a class="foot" href=""><strong>About</strong></a>
-        </ul>
+  <h1>Anavrin</h1>
+  <div class="line"></div>
+  <p id="TagLine">A class notes archive</p>
+  <!-- <img class="watermark" src="./assets/doc logo-02.png"> -->
+  <ul class="credits">
+    <a class="foot" href=""><strong>Team</strong></a>
+    <a class="foot" href="about.html"><strong>About</strong></a>
+  </ul>
 
-        <label>
-	        <input type="checkbox" onclick="darkmode()">
-	        <span class="check"></span>
-        </label> 
+  <!-- Darkmode switch -->
+  <label>
+    <input type="checkbox" onclick="darkmode()">
+    <span class="check"></span>
+   </label>
 
-        <input class="back" type="image" src="assets/back.png" alt="Submit" width="80" height="80"> 
+   <!-- 2nd page button -->
+  <input type="image" id="next" src="assets/back.png" />
 
-        <script src="script.js" charset="UTF-8"></script>
-    
-    </body>
+  <script src="script.js" charset="UTF-8"></script>
+</body>
 
 </html>
