--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <hr id="line">
     <p id="tagline">A class notes archive</p>
     <!-- Changed this button to a proper button instead of the checkbox -->
-    <button id="next"></button>
+    <button id="next" onclick="secondPage()"></button>
     <!-- Using nav as that is the standard navbar element -->
     <nav>
-      <a href="#">Team</a>
-      <a href="about.html">About</a>
+      <a id="hoverFx" href="#">Team</a> <!--added hover effect-->
+      <a id="hoverFx" href="#" onclick="aboutPage()">About</a>
     </nav>
   </div>
 
