changed about button

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <button id="next" onclick="secondPage()"></button>
     <!-- Using nav as that is the standard navbar element -->
     <nav>
-      <a id="hoverFx" href="#">Team</a> <!--added hover effect-->
-      <a id="hoverFx" href="#" onclick="aboutPage()">About</a>
+      <a id="hoverFx" href="#">Team</a>
+      <a id="hoverFx" href="pages/about.html">About</a>
     </nav>
   </div>
 
