--- a/index.html
+++ b/index.html
@@ -1,155 +1,32 @@
-@font-face {
-    src: url("assets/fonts/segoeuib.ttf");
-    font-family: Segoe UI;
-    
-}
-@font-face {
-    src: url("assets/fonts/segoeuisl.ttf");
-    font-family: Segoe UI light;
-}
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Anavrin</title>
+  <link rel="logo" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
 
-/* Changes: Everything but the ThemeToggler and the Watermark is now contained in this container. */
-#container {
-    position: relative;
-    z-index: 5;
-    padding-top: 10%;
-    padding-left: 2.5%;
-    max-height: 100vh;
-    max-width: 100%;
-}
+<body>
+  <!-- Watermark -->
+  <img class="watermark" src="./assets/doc logo-02.png"> 
+  <!-- Toggle Theme Button, changed to an actual button -->
+  <button id="toggleTheme" onclick="darkmode()"></button>
+  <!-- Container, everything else is inside of this. -->
+  <div id="container">
+    <h1>Anavrin</h1>
+    <!-- Using hr as it is made for this -->
+    <hr id="line">
+    <p id="tagline">A class notes archive</p>
+    <!-- Changed this button to a proper button instead of the checkbox -->
+    <button id="next" onclick="secondPage()"></button>
+    <!-- Using nav as that is the standard navbar element -->
+    <nav>
+      <a id="hoverFx" href="#">Team</a>
+      <a id="hoverFx" href="pages/about.html">About</a>
+    </nav>
+  </div>
 
-/* Replaced the previous "checkbox" button with an actual button */
-#toggleTheme {
-    position: fixed;
-    z-index: 7;
-    margin-top: 2%;
-    margin-left: 90vw;
-    display: block;
-    width: 4.5vw;
-    height: 2.5vw;
-    border-radius: 20px;
-    user-select: none;
-    background: black;
-    border: none;
+  <script src="script.js" charset="UTF-8"></script>
 
-}
-
-#toggleTheme:focus {
-    outline: none;
-}
-
-/* horizontal line below anavrin */
-/* Changes: Using <hr> tag since that is inbuilt and for this very purpose. */
-#line {
-    height: 6px;
-    width: 60vw;
-    background-color: #8664c3;
-    margin: 1% 0;
-    border: none;
-    border-radius: 5px;
-}
-
-/* Text: Anavrin */
-h1 {
-    color: #8664c3;
-    font-family: "Segoe UI", sans-serif;
-    font-size: 12vw;
-    margin: 0;
-    /* position: fixed; I added this */
-}
-
-/* a class notes archive */
-#tagline {
-    color: #8664c3;
-    font-family: "Segoe UI light";
-    font-size: 3vw;
-    margin-top: 2%;
-    margin-bottom: 8%;
-}
-
-/* link properties of buttons: About & Team */
-nav a {
-    color: #666666;
-    font-family: "Segoe UI", sans-serif;
-    text-decoration: none;
-    font-size: 3vw;
-
-}
-nav a:not(:first-child) {
-    margin: 0% 5%;
-}
-
-
-/* Anavrin logo watermark */
-/* Changes: margins and size are now responsive. */
-.watermark{
-    z-index: 1;
-    position: fixed;
-    max-width: 300px;
-    max-height: 300px;
-    width: 25vw;
-    height: 25vw;
-    opacity: 0.3;
-    margin-left: 70%;   /* Mess around with these values change */
-    margin-top: 16%;    /* the location of the watermark. (Keep in %) */
-}
-
-/* Dark mode background settings */
-.dark-mode{
-    background-color: black;
-}
-
-.dark-mode nav a {
-    color: #989898;
-}
-
-.dark-mode #toggleTheme {
-    background-color: whitesmoke;
-}
-
-/* Next arrow button */
-#next {
-    display: inline-block;
-    position: fixed;
-    z-index: 10;
-    width: 5vw;
-    height: 5vw;
-    max-height: 60px;
-    max-width: 60px;
-    margin-left: 85vw;
-    border-radius: 100px;
-    background-color: rgba(0,0,0,0);
-    background-image: url("./assets/back.png");
-    background-size: cover;
-    font-size: 3vw;
-    text-align: center;
-    font-weight: 100;
-    user-select: none;
-    border: none;
-}
-
-#next img {
-    width: 5vw;
-    height: 5vw;
-    max-height: 60px;
-    max-width: 60px;
-}
-
-
-#next:focus {
-    outline: none;
-}
-
-.aboutAnima {
-    transition: 50px;
-}
-
-/* next arrow button hover effect */
-#next:hover{
-    transform: scale(1.1);;
-}
-
-/* nav element hover color change */
-#hoverFx:hover{
-    color: #8664c3;
-}
+</body>
+</html>
