--- a/pages/about.html
+++ b/pages/about.html
@@ -2,7 +2,7 @@
 
     <head>
         <title>Who are we</title>
-        <link rel="stylesheet" type="text/css" href="aboutStyle.css"/>
+        <link rel="stylesheet" type="text/css" href="pages/aboutStyle.css"/>
     </head>
 
     <body>
